--- a/package.json
+++ b/package.json
@@ -26,14 +26,13 @@
         "cookie-session": "^2.0.0-alpha.2",
         "crypto-random-string": "^3.0.1",
         "csurf": "^1.9.0",
-        "eslint": "^4.19.1",
         "eslint-plugin-react": "^7.12.4",
         "express": "^4.14.0",
         "http-proxy-middleware": "^0.19.1",
         "jest": "^24.7.1",
         "multer": "^1.3.0",
-        "react": "^16.9.0-alpha.0",
-        "react-dom": "^16.9.0-alpha.0",
+        "react": "^17.0.0",
+        "react-dom": "^17.0.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
@@ -54,5 +53,6 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {}
 }
